--- a/AuthService/appsettings.json
+++ b/AuthService/appsettings.json
@@ -8,7 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AuthServiceCS": "server=.;database=AuthServiceDB;trusted_connection=true;"
+    "AuthServiceCS": "server=.;database=AuthServiceDB;trusted_connection=true;",
+    //"AuthServiceCS": "Server=tcp:flight-booking.database.windows.net,1433;Initial Catalog=AuthServiceDB;Persist Security Info=False;User ID=shahid.dar;Password=Core@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "JWT": {
     "Secret": "ruifTTeNiXSOneTeRcEsMysIsIhT",
